REQUEST-REPLY [REPLIER] FINAL

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>CONSUMER Main Page</title>
+    <title>Replier Main Page</title>
 </head>
 <body>
-    <h2>CONSUMER Main Page</h2>
+    <h2>Replier Main Page</h2>
 
     <br/>
     <hr/>
