--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,11 @@
     <p>Consumer an event</p>
 
     <button onclick="addConsumer()">Add consumer</button>
+    <div id="consumers"></div>
 
+    <br/>
+    <hr/>
+    <p>Processed:</p>
     <div id="info"></div>
 
 <script>
@@ -18,12 +22,25 @@ function addConsumer() {
     var xhttp = new XMLHttpRequest();
     xhttp.onreadystatechange = function() {
         if (this.readyState == 4 && this.status == 200) {
-         document.getElementById("info").innerHTML = this.responseText;
+         document.getElementById("consumers").innerHTML = this.responseText;
         }
     };
     xhttp.open("GET", url + '/addConsumer', true);
     xhttp.send();
 }
+
+function getInfo() {
+    var xhttp = new XMLHttpRequest();
+    xhttp.onreadystatechange = function() {
+        if (this.readyState == 4 && this.status == 200) {
+         document.getElementById("info").innerHTML = this.responseText;
+        }
+    };
+    xhttp.open("GET", url + '/info', true);
+    xhttp.send();
+}
+
+var intervalID = window.setInterval(getInfo, 2000);
 
 </script>
 </body>
